@@ -3,7 +3,7 @@ use Test;
 
 use Text::Utils :ALL;
 
-plan 17;
+plan 20;
 
 # normalize these strings
 my $str1 = '1 2  3   4    5     6      7       8        9         0';
@@ -12,6 +12,24 @@ my $str3 = '1 2  3   4    5     6      7       8        9         0 ';
 my $str4 = ' 1 2  3   4    5     6      7       8        9         0 ';
 # all should normalize to:
 constant $n = '1 2 3 4 5 6 7 8 9 0';
+
+# strings with tabs
+my $sT  = " 1   \t\t 2 \t  3  ";
+#   normalized
+my $sTn = "1 \t\t 2 \t 3";
+is normalize-string($sT, :save-tab), $sTn, "save-tab";
+
+# strings with newlines
+my $sN  = " 1   \n\n 2 \n  3  ";
+#   normalized
+my $sNn = "1 \n\n 2 \n 3";
+is normalize-string($sN, :save-nl), $sNn, "save-nl";
+
+# strings with tabs and newlines
+my $sTN  = " 1   \t\t\n\n 2 \n\t  3  ";
+#   normalized
+my $sTNn = "1 \t\t\n\n 2 \n\t 3";
+is normalize-string($sTN, :save-tabs, :save-nls), $sTNn, "save-tabs, save-nls (aliases)";
 
 is normalize-string($str1), $n;
 is normalize-string($str2), $n;
